webUI/G15.css
/* ... */
#PowerPanel {
    position:           absolute;
    left:               24px;
    right:              24px;
    height:             64px;
    bottom:             12px}

#PowerOffBtn {
    left:               0;
    bottom:             16px;
    box-shadow:         4px 4px 4px #222}
#PowerOffBtnCaption {
    left:               0;
    bottom:             0;
    width:              34px}

#DCPowerLamp,
#DCPowerLampFX {
    left:               56px;
    bottom:             21px;
    box-shadow:         4px 4px 4px #222}
#DCPowerLampFX {        /* used to animate the power up/down sequence */
    opacity:            0;
    z-index:            1;
    background-image:   radial-gradient(circle, #F00, #E00, #900)}
#DCPowerLampCaption {
    left:               52px;
    bottom:             0;
    width:              32px}

#ReadyLamp {
    left:               144px;
    bottom:             21px;
    box-shadow:         4px 4px 4px #222}
#ReadyLampCaption {
    left:               136px;
    bottom:             0;
    width:              40px}

#ResetBtn {
    left:               192px;
    bottom:             16px;
    box-shadow:         4px 4px 4px #222}
#ResetBtnCaption {
    left:               190px;
    bottom:             0;
    width:              34px}

#G15Logo {
    position:           absolute;
    right:              0;
    bottom:             0;
    width:              112px;
    transform:          rotate(2deg)}

/* Typewriter output pane */

#TypewriterOutput {
    position:           absolute;
    top:                514px;
    bottom:             16px;
    left:               8px;
    right:              8px}
#TypewriterPaperDiv {
    position:           absolute;
    height:             100%;
    width:              calc(100% - 8px);
    min-width:          600px;                  /* same as ControlPanelFrame */
    max-width:          calc(133ch + 20px);     /* allow for scroll bar */
    left:               50%;
    transform:          translate(-50%, 0);
    font-size:          12px;
    font-family:        Courier New, Courier, Consolas, monospace}
#TypewriterPaper {
    position:           absolute;
    height:             100%;
    width:              100%;
    min-width:          600px;                  /* same as ControlPanelFrame */
    max-width:          calc(133ch + 20px);     /* allow for scroll bar */
    left:               50%;
    transform:          translate(-50%, 0);
    white-space:        pre;
    overflow:           auto;
    padding:            4px;
    color:              black;
    background-color:   #FFE;
    border:             1px solid gray}

#TypewriterMenuIcon {
    position:           absolute;
    top:                4px;
    right:              20px;
    z-index:            10}
#TypewriterMenu {
    position:           absolute;
    display:            none;
    top:                8px;
    right:              4px;
    width:              410px;
    height:             40px;
    z-index:            12;
    text-align:         center;
    background-color:   #FFE;
    border:             1px solid #666;
    box-shadow:         3px 3px 3px #999}
#TypewriterMenu BUTTON {
    position:           relative;
    top:                50%;
    height:             24px;
    font-size:          9pt;
    line-height:        100%;
    vertical-align:     middle;
    background-color:   white;
    border:             2px solid #999;
    transform:          translate(0, -50%)}

#TypeOMaticPanel {
    position:           absolute;
    display:            none;
    top:                32px;
    right:              4px;
    width:              fit-content;
    height:             fit-content;
    padding:            4px;
    z-index:            10;
    opacity:            0.75;
    text-align:         center;
    white-space:        nowrap;
    font-family:        DejaVuSansWeb;
    font-weight:        bold;
    color:              black;
    background-color:   #FFE;
    border:             2px solid #080;
    box-shadow:         3px 3px 3px #999}
#TypeOMaticMeterBar {
    width:              24ch;
    margin-top:         4px;
    margin-bottom:      4px}
#TypeOMaticClearBtn, #TypeOMaticPauseBtn {
    height:             24px;
    width:              80px;
    border-color:       #666}
#TypeOMaticPanel .paused {
    color:              white;
    background-color:   red}

